tutorial page and leaving the dynamic font size equal to the size of the button

--- a/PuzzleGame/PuzzleGame.csproj
+++ b/PuzzleGame/PuzzleGame.csproj
@@ -58,8 +58,10 @@
 
 	<ItemGroup>
 	  <None Remove="Views\" />
+	  <None Remove="Models\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Views\" />
+	  <Folder Include="Models\" />
 	</ItemGroup>
 </Project>
